# vaultcli-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: audit.rs  clipboard.rs  crypto.rs  generator.rs  main.rs  models.rs  storage.rs  tui.rs  ui.rs  vault.rs
