[package]
name = "vaultcli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
arboard = "3.6.1"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
dirs = "6.0.0"
rand = { version = "0.8", features = ["std"] }
ratatui = "0.30.0"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[[bin]]
name = "vaultcli"
path = "src/main.rs"
